# C-POO

./: README.md
Herencia/: CMakeLists.txt
Herencia/include/: Estudiante.h  Persona.h
Herencia/src/: Estudiante.cpp  Persona.cpp  main.cpp
Herencia1/include/: Circulo.h  Punto.h
Herencia1/src/: Circulo.cpp  Punto.cpp  main.cpp
POO/: CMakeLists.txt
POO/include/: Tiempo.h
POO/src/: Tiempo.cpp  main.cpp
